HW5/test/deployment-postgres.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: postgres
  name: postgres
#  namespace: hw5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  strategy:
    rollingUpdate:
      maxSurge: 0
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: postgres
    spec:
      hostNetwork: true
      containers:
      - image: postgres:10.13
        name: postgres
        ports:
        - containerPort: 5432
          name: postgre
          protocol: TCP
        volumeMounts:
        - name: pgdata
          mountPath: /var/lib/postgresql/data
        env:
          - name: POSTGRES_USER
            value: testuser
          - name: POSTGRES_DB
            value: redminedb           
          - name: PGDATA
            value: /var/lib/postgresql/data/pgdata           
          - name: POSTGRES_PASSWORD
            valueFrom:
              secretKeyRef:
                name: pgsecret
                key: POSTGRES_PASSWORD
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 100m
            memory: 100Mi
      volumes:
      - name: pgdata
        persistentVolumeClaim:
          claimName: pgdata-pvc-hdd
