HW5/test/deployment-redmine.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redmine
  name: redmine
#  namespace: hw5
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redmine
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: redmine
    spec:
#      hostNetwork: true
      containers:
      - image: redmine:4.1.1
        name: redmine
        ports:
        - containerPort: 3000
          name: redmine
          protocol: TCP
        env:
          - name: REDMINE_DB_POSTGRES
            value: database
#            value: 10.0.0.15:5432
          - name: REDMINE_DB_USERNAME
            value: testuser           
          - name: REDMINE_DB_DATABASE
            value: redminedb
          - name: REDMINE_DB_PASSWORD
            valueFrom:
              secretKeyRef:
                name: pgsecret
                key: POSTGRES_PASSWORD
          - name: REDMINE_SECRET_KEY_BASE
            valueFrom:
              secretKeyRef:
                name: pgsecret
                key: REDMINE_SECRET_KEY_BASE
#        resources:
#          requests:
#            cpu: 100m
#            memory: 100Mi
#          limits:
#            cpu: 100m
#            memory: 100Mi
