HW5/test/service-redmine.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: srv-redmine
#  namespace: hw5
spec:
  ports:
  - port: 80
    targetPort: 3000
  selector:
    app: redmine
  type: ClusterIP
